--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "node-dev": "^3.1.3"
   },
   "dependencies": {
-    "chalk": "2.4.2",
-    "uuid": "3.1.0"
+    "chalk": "^4.0.0",
+    "progress": "^2.0.3",
+    "readline-sync": "^1.4.10",
+    "uuid": "^7.0.3"
   }
 }
