--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "start": "node-dev"
   },
   "devDependencies": {
-    "node-dev": "^3.1.3"
+    "node-dev": "^3.1.3",
+    "pm2": "^4.4.0"
   },
   "dependencies": {
     "chalk": "^4.0.0",
+    "fs-extra": "^9.0.0",
     "progress": "^2.0.3",
     "readline-sync": "^1.4.10",
     "uuid": "^7.0.3"
