--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "fs-extra": "^9.0.0",
     "progress": "^2.0.3",
     "readline-sync": "^1.4.10",
+    "redis": "^3.0.2",
     "uuid": "^7.0.3"
   }
 }
