--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "author": "Devvrat Shukla <devvratshukla@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "node-dev"
+    "start": "node-dev",
+    "build": "babel 9-es6-vs-es5 -d build"
   },
+  "type": "module",
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "node-dev": "^3.1.3",
     "pm2": "^4.4.0"
   },
